--- a/packages/navigation/src/sidebar/subcomponents/sidebar-group.module.css
+++ b/packages/navigation/src/sidebar/subcomponents/sidebar-group.module.css
@@ -7,6 +7,9 @@
   }
 
   [data-collapsible="icon"][data-state="collapsed"] & [data-slot="sidebar-group-category"] {
-    display: none;
+    opacity: 0;
+    /* margin-block: 0 !important; */
+    overflow: hidden;
+    /* display: none; */
   }
 }
