--- a/packages/navigation/src/sidebar/sidebar.module.css
+++ b/packages/navigation/src/sidebar/sidebar.module.css
@@ -9,11 +9,13 @@
 
   [data-hide-collapsed] {
     height: 100%;
+    width: 100%;
     transition: all var(--sidebar-transition-timing) var(--sidebar-transition-easing);
 
     [data-collapsible="icon"][data-state="collapsed"] & {
-      margin-block: 0 !important;
+      margin: 0 !important;
       height: 0;
+      width: 0;
     }
   }
 }
