--- a/packages/navigation/src/sidebar/subcomponents/sidebar-footer.module.css
+++ b/packages/navigation/src/sidebar/subcomponents/sidebar-footer.module.css
@@ -1,3 +1,4 @@
 .sidebar-footer {
   border-top: var(--globals-border-width) solid var(--globals-border-color);
+  background-color: color-mix(in oklab, var(--shade-background), transparent 65%);
 }
