feat: add table-cell-checkbox

--- a/packages/buttons/src/button/button.module.css
+++ b/packages/buttons/src/button/button.module.css
@@ -65,6 +65,7 @@
     --button-height: var(--forms-size-sm-height);
     --button-padding-x: 0;
     aspect-ratio: 1;
+    border-color: transparent;
   }
   &:where([data-size="sm"]) {
     --button-fontSize: var(--forms-size-sm-fontSize);
