--- a/packages/interactive/src/menu/menu.module.css
+++ b/packages/interactive/src/menu/menu.module.css
@@ -2,12 +2,12 @@
   outline: 0;
 }
 
-.Popup {
-  box-sizing: border-box;
+.popup {
   padding-block: 0.25rem;
-  border-radius: 0.375rem;
+  border-radius: var(--globals-border-radius);
   background-color: var(--shade-surface);
   color: var(--shade-foreground);
+  border: var(--globals-border-width) solid var(--shade-muted);
   transform-origin: var(--transform-origin);
   transition:
     transform 150ms,
