feat: overlays in next sandbox

--- a/apps/next-16/app/globals.css
+++ b/apps/next-16/app/globals.css
@@ -5,4 +5,5 @@
 @import "@uiid/forms/globals.css";
 @import "@uiid/tokens/globals.css";
 @import "@uiid/layout/globals.css";
+@import "@uiid/overlays/globals.css";
 @import "@uiid/typography/globals.css";
