--- a/packages/navigation/src/sidebar/subcomponents/sidebar-header.module.css
+++ b/packages/navigation/src/sidebar/subcomponents/sidebar-header.module.css
@@ -1,3 +1,4 @@
 .sidebar-header {
-  border-bottom: var(--globals-border-width) solid var(--globals-border-color);
+  /* border-bottom: var(--globals-border-width) solid var(--globals-border-color); */
+  min-height: var(--globals-header-height);
 }
