--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -66,6 +66,13 @@
     --shade-foreground: var(--white);
   }
 
+  html,
+  body {
+    @media (pointer: fine) {
+      overscroll-behavior: none;
+    }
+  }
+
   body {
     background-color: var(--shade-background);
     color: var(--shade-foreground);
