--- a/packages/forms/src/formfield/subcomponents/formfield-slots.css
+++ b/packages/forms/src/formfield/subcomponents/formfield-slots.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: stretch;
   width: -webkit-fill-available;
+  width: -moz-available;
 
   &:has([uiid="select"]) {
     width: auto;
