refactor: cleanup, fix tailwind specificity

--- a/apps/next-16/app/globals.css
+++ b/apps/next-16/app/globals.css
@@ -1,15 +1,15 @@
-@import "tailwindcss" layer(uiid.tailwind);
+@import "tailwindcss";
 
-@import "@uiid/tokens/globals.css";
-
-@import "@uiid/layout/globals.css";
-@import "@uiid/typography/globals.css";
-
-@import "@uiid/buttons/globals.css";
-@import "@uiid/cards/globals.css";
-@import "@uiid/forms/globals.css";
-@import "@uiid/indicators/globals.css";
-@import "@uiid/interactive/globals.css";
-@import "@uiid/overlays/globals.css";
-@import "@uiid/tables/globals.css";
-@import "@uiid/navigation/globals.css";
+@layer components {
+  @import "@uiid/buttons/globals.css";
+  @import "@uiid/cards/globals.css";
+  @import "@uiid/forms/globals.css";
+  @import "@uiid/indicators/globals.css";
+  @import "@uiid/interactive/globals.css";
+  @import "@uiid/layout/globals.css";
+  @import "@uiid/navigation/globals.css";
+  @import "@uiid/overlays/globals.css";
+  @import "@uiid/tables/globals.css";
+  @import "@uiid/tokens/globals.css";
+  @import "@uiid/typography/globals.css";
+}
