--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -136,4 +136,16 @@
     border-radius: var(--globals-border-radius);
     border: var(--globals-border-width) solid var(--shade-muted);
   }
+
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+  }
 }
