--- a/packages/overlays/src/modal/modal.module.css
+++ b/packages/overlays/src/modal/modal.module.css
@@ -1,4 +1,5 @@
 @import "@uiid/tokens/overlays.tokens.css";
+@import "@uiid/tokens/modal.tokens.css";
 
 .modal-backdrop {
   position: fixed;
@@ -28,7 +29,7 @@
   transition: all var(--globals-transition-timing);
   z-index: 3;
 
-  max-width: 40rem;
+  max-width: var(--modal-width);
   width: calc(100vw - 3rem);
   margin-top: -2rem;
 
@@ -36,5 +37,18 @@
   &[data-ending-style] {
     opacity: 0;
     transform: translate(-50%, -50%) scale(var(--globals-transform-scale-down));
+  }
+
+  &[data-size="sm"] {
+    --modal-width: var(--modal-size-sm);
+  }
+  &[data-size="md"] {
+    --modal-width: var(--modal-size-md);
+  }
+  &[data-size="lg"] {
+    --modal-width: var(--modal-size-lg);
+  }
+  &[data-size="xl"] {
+    --modal-width: var(--modal-size-xl);
   }
 }
