--- a/packages/interactive/src/menu/menu.module.css
+++ b/packages/interactive/src/menu/menu.module.css
@@ -1,4 +1,4 @@
-.Positioner {
+.positioner {
   outline: 0;
 }
 
@@ -7,7 +7,7 @@
   border-radius: var(--globals-border-radius);
   background-color: var(--shade-surface);
   color: var(--shade-foreground);
-  border: var(--globals-border-width) solid var(--shade-muted);
+  border: var(--globals-border-width) solid var(--globals-border-color);
   transform-origin: var(--transform-origin);
   transition:
     transform 150ms,
@@ -20,8 +20,8 @@
   }
 }
 
-.Item,
-.SubmenuTrigger {
+.item,
+.submenu-trigger {
   outline: 0;
   cursor: default;
   user-select: none;
@@ -64,15 +64,9 @@
   }
 }
 
-.SubmenuTrigger {
+.submenu-trigger {
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
   padding-right: 1rem;
-}
-
-.Separator {
-  margin: 0.375rem 1rem;
-  height: 1px;
-  background-color: var(--shade-muted);
 }
