feat: input hover background, table header cleanup

--- a/packages/forms/src/styles.css
+++ b/packages/forms/src/styles.css
@@ -63,6 +63,10 @@
   outline-color: var(--forms-outline-color);
   outline-width: var(--forms-outline-width);
 
+  &:hover {
+    background-color: var(--forms-backgroundHover);
+  }
+
   /** Validation */
   &:not(:placeholder-shown)[data-validate="true"],
   &:has(:not(:placeholder-shown)[data-validate="true"]) {
