--- a/packages/forms/src/checkbox/checkbox.module.css
+++ b/packages/forms/src/checkbox/checkbox.module.css
@@ -10,26 +10,27 @@
 }
 
 .checkbox {
-  box-sizing: border-box;
-  display: flex;
   width: var(--checkbox-size);
   height: var(--checkbox-size);
+  display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 0.25rem;
+  border-radius: var(--checkbox-border-radius);
   outline: 0;
   position: relative;
-  padding: 0;
-  margin: 0;
   border: none;
+  cursor: pointer;
 
   &[data-unchecked] {
     border: 1px solid var(--forms-border-color);
     background-color: var(--forms-background);
+    &:hover {
+      background-color: var(--forms-backgroundHover);
+    }
   }
 
   &[data-checked] {
-    background-color: var(--forms-foreground);
+    background-color: var(--shade-foreground);
   }
 
   &:focus-visible {
