feat: add wrapper to table actions

--- a/apps/next-16/app/globals.css
+++ b/apps/next-16/app/globals.css
@@ -2,6 +2,7 @@
 
 @layer components {
   @import "@uiid/buttons/globals.css";
+  @import "@uiid/calendars/globals.css";
   @import "@uiid/cards/globals.css";
   @import "@uiid/forms/globals.css";
   @import "@uiid/indicators/globals.css";
