--- a/packages/tables/src/table/subcomponents/table-cell.module.css
+++ b/packages/tables/src/table/subcomponents/table-cell.module.css
@@ -1,3 +1,8 @@
 .table-cell {
   padding: var(--table-cell-padding-y) var(--table-cell-padding-x);
+  height: var(--table-cell-min-height);
+
+  &:where([data-collapse]) {
+    width: 0;
+  }
 }
