--- a/packages/cards/src/card/card.module.css
+++ b/packages/cards/src/card/card.module.css
@@ -35,15 +35,15 @@
   }
 
   &:where([data-size="xs"]) {
-    padding-block: calc(var(--globals-padding-y) * 0.5);
-    padding-inline: calc(var(--globals-padding-x) * 0.5);
+    padding-block: calc(var(--globals-padding-y) * 0.75);
+    padding-inline: calc(var(--globals-padding-x) * 0.75);
     font-size: 0.625rem;
     font-weight: 600;
   }
 
   &:where([data-size="sm"]) {
-    padding-block: calc(var(--globals-padding-y) * 0.75);
-    padding-inline: calc(var(--globals-padding-x) * 0.75);
+    padding-block: var(--globals-padding-y);
+    padding-inline: var(--globals-padding-x);
   }
   &:where([data-size="md"]) {
     padding-block: var(--globals-padding-y);
@@ -51,7 +51,7 @@
   }
   &:where([data-size="lg"]) {
     padding-block: calc(var(--globals-padding-y) * 1.25);
-    padding-inline: var(--globals-padding-x);
+    padding-inline: calc(var(--globals-padding-x) * 1.25);
   }
 
   &:where([data-variant="info"]) {
