--- a/packages/layout/src/list/subcomponents/list-text-block.module.css
+++ b/packages/layout/src/list/subcomponents/list-text-block.module.css
@@ -1,5 +1,7 @@
 .list-text-label {
   display: list-item;
+  min-height: var(--globals-icon-size);
+  align-content: center;
 
   :is(ol) &::marker {
     font-size: 0.625rem;
