--- a/packages/forms/src/combobox/combobox.module.css
+++ b/packages/forms/src/combobox/combobox.module.css
@@ -2,22 +2,28 @@
   width: 100%;
 }
 
+.combobox-popup {
+  min-width: var(--anchor-width);
+}
+
 .combobox-input-wrapper {
   position: relative;
 
-  &:has(.Clear) .Input {
+  /* &:has(.Clear) .Input {
     padding-right: calc(0.5rem + 1.5rem * 2);
-  }
+  } */
 }
 
 .combobox-actions {
-  bottom: 0;
   position: absolute;
-  right: 0.5rem;
+  top: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .combobox-action {
   all: unset;
+  cursor: text;
   width: 1.5rem;
   height: 2.5rem;
   color: var(--shade-accent);
@@ -29,52 +35,6 @@
 
 .combobox-positioner {
   outline: 0;
-}
-
-.Popup {
-  box-sizing: border-box;
-  border-radius: 0.375rem;
-  background-color: canvas;
-  color: var(--color-gray-900);
-  width: var(--anchor-width);
-  max-height: 23rem;
-  max-width: var(--available-width);
-  transition:
-    opacity 0.1s,
-    transform 0.1s;
-  transform-origin: var(--transform-origin);
-
-  &[data-starting-style],
-  &[data-ending-style] {
-    opacity: 0;
-    transform: scale(0.95);
-  }
-
-  @media (prefers-color-scheme: light) {
-    outline: 1px solid var(--color-gray-200);
-    box-shadow:
-      0 10px 15px -3px var(--color-gray-200),
-      0 4px 6px -4px var(--color-gray-200);
-  }
-
-  @media (prefers-color-scheme: dark) {
-    outline: 1px solid var(--color-gray-300);
-    outline-offset: -1px;
-  }
-}
-
-.List {
-  box-sizing: border-box;
-  overflow-y: auto;
-  overscroll-behavior: contain;
-  padding-block: 0.5rem;
-  scroll-padding-block: 0.5rem;
-  outline: 0;
-  max-height: min(23rem, var(--available-height));
-
-  &[data-empty] {
-    padding: 0;
-  }
 }
 
 .Item {
@@ -121,11 +81,4 @@
   display: block;
   width: 0.75rem;
   height: 0.75rem;
-}
-
-.Empty:not(:empty) {
-  font-size: 0.925rem;
-  line-height: 1rem;
-  color: var(--color-gray-600);
-  padding: 1rem;
 }
